# parametric-envelope

./: .gitignore  CMakeLists.txt  README.md  adsr.plot  library.json
examples/src/: example.cpp
include/: ParametricEnvelope.h  Timer.h
src/: ParametricEnvelope.cpp  Timer.cpp
